src/objects/MMD_Con_Description__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant Firm Description notes</description>
    <fields>
        <fullName>Category_Topic__c</fullName>
        <label>Category/Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Firm Description</relationshipLabel>
        <relationshipName>MMD_Con_Descriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Sequence #</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>MMD Con Description</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Descriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>